# gokaatru

./: .env.example  .env.production.example  .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SPECIFICATION.md  CODE_REVIEW_LOG.md  DEPLOY_AWS_EC2.md  Dockerfile  Dockerfile.backend  README.md  WORKFLOW_DESIGNER_SPEC.md  WORKFLOW_FRONTEND_SPEC.md  docker-compose.prod.yml  docker-compose.yml  frontend_spec.md  introspect_mcp.py  librechat_config.yaml  pyproject.toml  startup.ps1
deploy/: Caddyfile
deploy/aws/ec2/: bootstrap-ubuntu.sh  deploy.sh  update.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx  styles.css
frontend/src/components/: AppHeader.tsx  CompareView.tsx  CopilotView.tsx  HomeView.tsx  PhaseTabs.tsx  SetupView.tsx  WindKitExplorerView.tsx  WorkflowView.tsx
server/: main.py
server/api/: __init__.py  deps.py  main.py  mcp.py  schemas.py  windkit_schemas.py
server/core/: brighthub.py  executor.py  formulas.py  momm.py  regression.py  spatial.py  validators.py
server/schemas/: __init__.py  common.py
server/state/: dataset_pool.py  manager.py  session.py
server/tools/: air_density.py  brighthub.py  cleaning.py  clipping.py  config.py  data_io.py  ensemble.py  era5.py  extrapolation.py  homogeneity.py  ltc.py  ltc_ml.py  map.py  shear.py  statistics.py  uncertainty.py  visualization.py
tests/: conftest.py  test_api_cors.py  test_api_datasets.py  test_api_mcp.py  test_api_mcp_catalog.py  test_api_sessions.py  test_api_workflow.py  test_api_workflow_execution.py  test_e2e.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase6_state.py  test_phase7.py  test_phase8.py  test_phase9.py  test_uploaded_dataset.py  test_visualization_sensor_names.py  test_windkit.py
(+111 files in other folders)
